slight changes to matchmaking API endpoint docs
